Fix alignment issue in ideaviewer

--- a/static/css/core/system.less
+++ b/static/css/core/system.less
@@ -698,7 +698,7 @@ textarea.ideaInput + div {
 
 /* Fix for the uneven spacing of the last row of ideas in the ideasContainer */
 .invisibleIdeaBlock {
-    width: 130px;
+    width: @ideaBlockWidth;
     height: 0;
     margin: 0 10px;
 }
